--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sovgon",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index",
@@ -10,15 +10,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "chalk": "^5.2.0",
-    "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3",
-    "mongoose": "^7.1.1",
-    "node-cron": "^3.0.2",
-    "@types/node-cron": "^3.0.7"
+    "@types/node-cron": "^3.0.8",
+    "chalk": "^5.3.0",
+    "discord.js": "^14.12.1",
+    "dotenv": "^16.3.1",
+    "mongoose": "^7.4.3",
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
-    "eslint": "^8.25.0",
-    "typescript": "^5.0.4"
+    "eslint": "^8.47.0",
+    "typescript": "^5.1.6"
   }
 }
